# bio-stamp

./: BUILD  LICENSE  Makefile.am  ProjectHome.md  README  README.txt  TEST  configure.ac  svn-commit.tmp
branches/default-STAMPDIR/defs/: pdb.directories
branches/default-STAMPDIR/src/: aadat.h  alignfit.c  avestruc.c  defaults.h  domain.h  dstamp.c  fmatfit.c  gstamp.c  mergestamp.c  mergetrans.c  pdbseq.c  pickframe.c  stamp.c  stampgetpars.c  transform.c
branches/default-STAMPDIR/t/: 1.t  2.t  3.stamp.out  TEST
branches/smjs/defs/: pdb.directories
branches/smjs/src/: a3to1.c  align_clean.c  alignfit.c  alignfitgetpars.c  aliseq.c  disp.c  display_align.c  dstamp.c  fmatmult.c  get_clust.c  getdomain.c  getdsspsum.c  getfile.c  getks.c  getrksum.c  getsec.c  getstampdat.c  getstamprel.c  gjnoc.c  gjutil.c  gstamp.c  header.c  hsort.c  idist.c  igetcb.c  igetgen.c  igetside.c  ltou.c  makeafile.c  makefile.dec  makefile.mips4-sgi  makefile.sgi_ipa  matfit.c  matinv.c  matmult.c  matprod.c  mergestamp.h  murzin_P.c  openfile.c  overlay.c  (+21 more)
branches/stamp-4.4/defs/: pdb.directories
branches/stamp-4.4/examples/: scop_1.53_fam.dom  stamp_trans.scan
branches/stamp-4.4/src/: R.c  agetbloc.c  alignfitgetpars.c  aliseq.c  c_split.c  check.c  count_domain.c  extract_dssp.c  extract_pdb.c  extrans.c  fmatmult.c  getks.c  getstamprel.c  igetcadssp.c  makeafile.c  matfit.c  mergetrans.c  newoutput.c  openfile.c  stamp.c  threestate.c  transform.c  ver2hor.c
branches/stamp-4.4/t/: 1.aa  1.t  2.blc  2.dom  2.t
defs/: brookhaven_subset.domains  dssp.directories  pdb.directories  scop_domain.dom  scop_fam.dom  scop_fold.dom  scop_prot.dom  scop_sf.dom  scop_species.dom  scop_supf.dom  stamp.defaults.new  tmp
doc/: 1paz_versus_naf.out  announce.txt  appendix_A  license  stamp.aux  stamp.bbl  stamp.blg  stamp.dvi  stamp.tex  stamp.toc  stamp_a4.ps
doc/stamp/: images.bbl  images.pl  images.tex  index.html  internals.pl  node11.html  node12.html  node13.html  node14.html  node16.html  node17.html  node18.html  node19.html  node2.html  node21.html  node22.html  node23.html  node24.html  node25.html  node27.html  node28.html  node3.html  node30.html  node31.html  node32.html  node33.html  node34.html  node36.html  node40.html  node41.html  node43.html  node44.html  node45.html  node47.html  node51.html  node52.html  node57.html  node59.html  node6.html  node8.html  (+1 more)
examples/ac_prot/: 1cms.dssp  1cmsN.domain  2apr.dssp  ac_prot.9.clean.post  ac_prot.domains  ac_prot.scan  pdb1cms.ent  pdb2apr.ent  stamp_trans.scan
examples/globin/: 1lh1.ps  2lhb.dssp  4mbn.dssp  globin.1  globin.2  globin.3  globin.4  globin.5  globin.5.clean  globin.domains  globin.mat  globin_align.ps  globin_align_als.com  globins.5.post  stamp_rough.trans
examples/ig/: 1acx.dssp  1cms.dssp  1l01.dssp  2abx.dssp  2aza.dssp  2fb4.dssp  2fb4lv.domain  2fb4lv_stamp.sorted  2hhb.dssp  2pcy.dssp  2sod.dssp  3cd4.dssp  3dpa.dssp  ig_like.1  ig_like.2  ig_like.4  ig_like.5  ig_like.7  ig_like.8  some.domains  stamp_trans.1  stamp_trans.9  stamp_trans.scan
examples/s_prot/: 2alp.dssp  2sga.dssp  3est.dssp  3sgb.dssp  4cha.dssp  s_prot.2  s_prot.3  s_prot.4  s_prot.5  s_prot.6  s_prot.8  s_prot.seqs  s_prot_alignfit.trans
perl/: Palign.pm  aconvert  aprettify  bobscript.colours  extrans  ras2dom.pl  stamp.pl
script/: stamp-split-biounit-models.pl  stamp-update-biounit  stamp-update-biounit-models  stamp-update-pdb  stamp-update-pdbdom  stamp-update-pdbseq
src/: Makefile.am  a3to1.c  agetbloc.c  align_clean.c  alignfit.c  alignfit.h  alignfitgetpars.c  aliseq.c  avestruc.c  c_split.c  ccprobcalc.c  check.c  clean_block.c  closefile.c  clus2blc.c  clust.blk  cluster.h  cofm.c  disp.c  display_align.c  dosort.c  dstamp.c  dstampgetpars.c  dstampreadcom.c  extract_dssp.c  extract_pdb.c  extrans.c  fmatfit.c  fmatmult.c  general.h  get_clust.c  getca.c  getdomain.c  getdsspsum.c  getfile.c  getks.c  getp_nt.c  getrksum.c  getsec.c  getstampdat.c  (+79 more)
t/: 1.dom  1.t  1rv8.dssp  2.t  3.t  pdb.directories
tags/stamp-4.0/: BUILD
tags/stamp-4.4/: BUILD  INSTALL  README
tags/stamp-4.6.05/: README  configure.ac
tags/stamp-4.6.09/: ChangeLog  configure.ac
tags/stamp-4.6.10/: configure.ac
tags/stamp-4.6.11/: README
trunk/: BUILD  ChangeLog  Makefile.am  README  README.txt  configure.ac
trunk/defs/: dssp.directories  pdb.directories  stamp.defaults
trunk/doc/: announce.txt  stamp.tex
trunk/examples/: 1cmsN_v_scop_fam.stamp
trunk/examples/ac_prot/: 1cmsN_stamp.sorted  ac_prot.5  ac_prot.6  ac_prot.8
trunk/examples/globin/: 1lh1.molscript  globin.5  globin.5.post  globin.domains  globin_align.ps
trunk/examples/ig/: 2fb4lv_stamp.sorted  ig_like.1  ig_like.12  ig_like.4  stamp_trans.10  stamp_trans.mat  stamp_trans.scan
trunk/examples/s_prot/: s_prot.9  s_prot_amps.align
trunk/perl/: Palign.pm  aconvert  amerge  caroline.eg  extrans  scop2stamp
trunk/script/: stamp-split-biounit-models.pl
trunk/src/: Makefile.am  align_clean.c  alignfit.c  alignfit.h  alignfitgetpars.c  aliseq.c  array.h  avestruc.c  c_split.c  check.c  clean_block.c  closefile.c  cofm.c  count_domain.c  disp.c  domain.h  dosort.c  dstamp.c  dstamp.h  extract_dssp.c  extract_pdb.c  extrans.c  fmatfit.c  get_clust.c  getca.c  getdomain.c  getdsspsum.c  getfile.c  getsec.c  getstamprel.c  gjnoc.c  gjutil.h  gstamp.c  idist.c  igetca.c  igetca_4.3.c  igetcadssp.c  igetgen.c  igetp_nt.c  makeafile.c  (+45 more)
trunk/t/: 1.t  3.t  TEST  dssp.directories  large_remark_3.t  pdb.directories
(+551 files in other folders)
